--- a/UKitApp/Base.lproj/Main.storyboard
+++ b/UKitApp/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                             <action selector="sliderAction" destination="BYZ-38-t0r" eventType="valueChanged" id="gHm-mj-Yap"/>
                                         </connections>
                                     </slider>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ernter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6zT-Ec-3Q8">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6zT-Ec-3Q8">
                                         <rect key="frame" x="0.0" y="201.5" width="382" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -52,9 +52,12 @@
                                         <rect key="frame" x="0.0" y="275.5" width="382" height="39"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title=" ">
+                                        <state key="normal" title="Done">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="doneButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="qdd-5W-ECi"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -71,6 +74,7 @@
                         <outlet property="mainLabel" destination="uto-Ti-cHj" id="JwP-mK-aCH"/>
                         <outlet property="segmentedControl" destination="8Rm-YV-OLg" id="5jh-XQ-Lqe"/>
                         <outlet property="slider" destination="WXo-Q8-C1M" id="Sx6-Pz-8dy"/>
+                        <outlet property="textField" destination="6zT-Ec-3Q8" id="kV6-8q-PEL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
