--- a/UKitApp/Base.lproj/Main.storyboard
+++ b/UKitApp/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="tNy-Oy-Wne">
-                                <rect key="frame" x="16" y="84" width="382" height="314.5"/>
+                                <rect key="frame" x="16" y="84" width="382" height="570.5"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8Rm-YV-OLg">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="32"/>
@@ -59,6 +59,9 @@
                                             <action selector="doneButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="qdd-5W-ECi"/>
                                         </connections>
                                     </button>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="Ymz-IV-DpM">
+                                        <rect key="frame" x="0.0" y="354.5" width="382" height="216"/>
+                                    </datePicker>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -71,6 +74,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="datePicker" destination="Ymz-IV-DpM" id="25G-j9-opT"/>
                         <outlet property="mainLabel" destination="uto-Ti-cHj" id="JwP-mK-aCH"/>
                         <outlet property="segmentedControl" destination="8Rm-YV-OLg" id="5jh-XQ-Lqe"/>
                         <outlet property="slider" destination="WXo-Q8-C1M" id="Sx6-Pz-8dy"/>
